# ArduinoConroller

./: #.gitignore#  .gitignore  Blog.docx  EwynController.cpp  EwynSkidSteerDrive.cpp  EwynSkidSteerDrive.h  EwynSkiddSteerDrive.h  LICENSE.md  LineSense.cpp  LineSense.h  Sensors copy.cpp  rplidar.rviz  t1.cpp  t2.cpp
ArduinoConroller/Arlene/: Motor.h
ArduinoConroller/ArleneArduino/: ArleneArduino.ino  ArleneMotor.cpp  ArleneMotor.h
ArduinoConroller/ControllerWithTimer/: ControllerWithTimer.ino  IMU.h  LineSensor.h  Log.h  Map.h  Motor.h  QuadratureEncoder.h  SensorStick.h  Strategy.h
ArduinoConroller/Docs/: Donna.docx  Quadrature Encoder too Fast for Arduino (with Solution) » Dr. Rainer Hessmer.webarchive
ArduinoConroller/I2C1/: Makefile
Arlene/: Arlene.ino  Motor.h
Docs/: Arduino pinout.numbers  Log 2015 06 21 2116
Docs/HMC5883/: HMC5883.ino
Docs/Motor_Shield-master/: README.md
Docs/eagle file/: Motor shield 2.0.brd  Motor shield 2.0.sch
Docs/hmc5843/: Makefile  hmc5843.c  hmc5843.hex
Due/DacTest1/: DacTest1.ino
Due/DacTest2/: DacTest2.ino
Due/DacTest3/: DacTest3.ino
Ewyn/: .sconsign.dblite
I2C1/: Makefile  t1.cpp  xt1.cpp
Kaimi/: 12 Pos  2-Row Terminal Barrier Strip.ai  KaimiBottomComputePlateV2.ai  KaimiBottomComputePlateV2.eps  KaimiBottomComputePlateV3.ai  ePaper.ino
SerialTest/: SerialTest.ino
cvtest/: #simpletest_raspicam.cpp#  CMakeLists.txt  EwynCamera.cpp  EwynCamera.h  Makefile  detecto  detecto.cpp  simpletest_raspicam.cpp  simpletest_raspicam_cv  simpletest_raspicam_cv.cpp  xCMakeLists.txt
ros_lib/: ArduinoHardware.h
(+88 files in other folders)
